# attack_cw

./: .gitignore  README.md  attack_black_box.py  attack_cw.py  attack_infty.py  attack_l2.py  plot_examples_attacks.py  pyproject.toml  train_vae.py
alg/: __init__.py  lowerbound_functions.py  vae_new.py
attacks/: black_box.py  momentum_iterative_method.py
models/: conv_encoder_cifar10.py  conv_encoder_mnist.py  conv_generator_cifar10_A.py  conv_generator_cifar10_B.py  conv_generator_cifar10_C.py  conv_generator_cifar10_D.py  conv_generator_cifar10_E.py  conv_generator_cifar10_F.py  conv_generator_cifar10_G.py  conv_generator_mnist_A.py  conv_generator_mnist_B.py  conv_generator_mnist_C.py  conv_generator_mnist_D.py  conv_generator_mnist_E.py  conv_generator_mnist_F.py  conv_generator_mnist_G.py  convnet.py  deconv.py  mlp.py  mlp_encoder_cifar10.py  mlp_generator_cifar10_E.py  mlp_generator_cifar10_F.py  mlp_generator_cifar10_G.py
results_gtsrb_white_box_infty/: gtsrb_accuracy_vs_epsilon.json
results_mnist_white_box_infty/: mnist_accuracy_vs_epsilon.json
utils/: cifar10.py  gtsrb.py  mnist.py  utils.py  visualisation.py
