[tool.poetry]
name = "pgm"
version = "0.1.0"
description = ""
authors = ["killian31 <80256683+killian31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
torch = "2.2.2"
torchvision = "0.17.2"
matplotlib = "^3.9.2"
black = "^24.10.0"
cleverhans = "^4.0.0"
tqdm = "^4.67.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
